--- a/package.yaml
+++ b/package.yaml
@@ -48,3 +48,11 @@ dependencies:
 
 library:
   source-dirs: src
+
+tests:
+  github-rest-test:
+    source-dirs:  test
+    main:         Main.hs
+    dependencies:
+    - github-rest
+    - tasty
