--- a/stack-ghc-8.8.yaml
+++ b/stack-ghc-8.8.yaml
@@ -1,23 +1,8 @@
-resolver: nightly-2019-09-26
+resolver: nightly-2019-10-07
 
 packages:
   - .
 
 extra-deps:
-  - aeson-1.4.5.0
-  - asn1-encoding-0.9.5
-  - asn1-parse-0.9.4
-  - connection-0.3.1
-  - http-client-0.6.4
-  - http-client-tls-0.3.5.3
-  - http-types-0.12.3
-  - jwt-0.10.0
-  - network-3.1.1.0
-  - socks-0.6.0
-  - streaming-commons-0.2.1.1
-  - time-compat-1.9.2.2
-  - tls-1.5.1
-  - x509-1.7.5
-  - x509-store-1.6.7
-  - x509-system-1.6.6
-  - x509-validation-1.6.11
+  - github: ocharles/aeson-qq
+    commit: c9e9537a1d05480649e9f6df70d88b59eb53e5bb
