--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,24 +41,26 @@ jobs:
       # init
       - checkout
       - run:
+          name: Install stack
+          command: |
+            curl -sSL https://get.haskellstack.org/ | sh
+            stack --version
+
+      # install dependencies
+      - run:
           name: Build cache key
           command: |
             FILES=(
               "${STACK_YAML}"
               package.yaml
             )
-            cat "${FILES[@]}" > cache-key.txt
-            curl -sSL https://get.haskellstack.org/ | sed -n 's/^STACK_VERSION="\(.*\)"/\1/p' >> cache-key.txt
-
-      # install stack and dependencies
+            echo "${STACK_YAML}" > cache-key.txt
+            cat "${FILES[@]}" >> cache-key.txt
+            stack --version >> cache-key.txt
+            cat cache-key.txt
       - run:
           name: Install system dependencies
           command: yum install -y zlib-devel
-      - run:
-          name: Install stack
-          command: |
-            curl -sSL https://get.haskellstack.org/ | sh
-            stack --version
       - restore_cache:
           key: *cache_key
       - run:
