--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,7 +83,25 @@ jobs:
             - ~/.stack
             - .stack-work
 
-      # lint, build, and test
+      # build
+      - run:
+          name: Build
+          command: |
+            STACK_ARGS=(
+                --test
+                --no-run-tests
+                --ghc-options -Werror
+            )
+            if [[ -n "${CI_LATEST}" ]]; then
+                STACK_ARGS+=(--coverage)
+            fi
+
+            stack build "${STACK_ARGS[@]}"
+      - run:
+          name: Check Cabal file up to date
+          command: git diff --exit-code *.cabal
+
+      # lint
       - when:
           condition: << parameters.latest >>
           steps:
@@ -95,32 +113,32 @@ jobs:
                   scripts/hlint.sh || STATUS=1
                   scripts/stylish-haskell.sh || STATUS=1
                   exit "${STATUS}"
-      - run:
-          name: Build
-          command: |
-            STACK_ARGS=(
-                --test
-                --no-run-tests
-                --ghc-options -Werror
-            )
-            if [[ -n "${CI_LATEST}" ]]; then
-                STACK_ARGS+=(--haddock)
-            fi
 
+      # test
+      - run:
+          name: Test
+          command: |
+            STACK_ARGS=(--test)
+            if [[ -n "${CI_LATEST}" ]]; then
+              STACK_ARGS+=(--coverage)
+            fi
             stack build "${STACK_ARGS[@]}"
 
-            if [[ -n "${CI_LATEST}" ]]; then
-              mkdir -p .ci/
-              tar czf .ci/haddock-docs.tar.gz -C "$(find .stack-work/dist -regex '.*/doc/html/[^/]*')" .
-            fi
+      # build haddock
       - when:
           condition: << parameters.latest >>
           steps:
-            - store_artifacts:
-                path: .ci/
-      - run:
-          name: Test
-          command: stack test --ta --no-create
+            - run:
+                name: Build haddock
+                command: stack build --haddock
+            - run:
+                name: Bundle haddock docs
+                command: |
+                  mkdir -p .ci/
+                  tar czf .ci/haddock-docs.tar.gz -C "$(find .stack-work/dist -regex '.*/doc/html/[^/]*')" .
+
+      - store_artifacts:
+          path: .ci/
 
 workflows:
   version: 2
