Fix linters in CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,8 @@ jobs:
 
             # build linters for cache
             if [[ -n "${CI_LATEST}" ]]; then
-                stack build hlint fourmolu
+                stack install -j1 hlint fourmolu
+                echo 'export PATH=~/.local/bin:$PATH' >> "${BASH_ENV}"
             fi
       - save_cache:
           key: *cache_key
