Check that all files are up-to-date

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,8 +97,8 @@ jobs:
 
             stack build "${STACK_ARGS[@]}"
       - run:
-          name: Check Cabal file up to date
-          command: git diff --exit-code *.cabal
+          name: Check files up to date
+          command: git diff --exit-code
 
       # lint
       - when:
