--- a/stack-ghc-9.0.yaml
+++ b/stack-ghc-9.0.yaml
@@ -2,7 +2,8 @@ resolver: nightly-2021-11-28
 
 extra-deps:
   - aeson-2.0.2.0
-  - jwt-0.10.1
+  - cryptostore-0.2.1.0
+  - jwt-0.11.0
 
 flags:
   cryptonite:
