--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     env:
-      FOURMOLU_VERSION: '0.7.0.1'
+      FOURMOLU_VERSION: '0.12.0.0'
       HLINT_VERSION: '3.5'
     steps:
       - uses: actions/checkout@v3
@@ -64,7 +64,7 @@ jobs:
             -o /usr/local/bin/fourmolu
           chmod +x /usr/local/bin/fourmolu
       - name: Run fourmolu
-        run: fourmolu -m check $(git ls-files '*.hs')
+        run: fourmolu -m check .
 
       - name: Install hlint
         run: |
