--- a/github-rest.cabal
+++ b/github-rest.cabal
@@ -1,6 +1,6 @@
 cabal-version: >= 1.10
 
--- This file has been generated from package.yaml by hpack version 0.35.0.
+-- This file has been generated from package.yaml by hpack version 0.35.2.
 --
 -- see: https://github.com/sol/hpack
 
@@ -11,12 +11,12 @@ description:    Query the GitHub REST API programmatically, which can provide a 
                 flexible and clear interface than if all of the endpoints and their types
                 were defined as Haskell values.
 category:       GitHub
-homepage:       https://github.com/LeapYear/github-rest#readme
-bug-reports:    https://github.com/LeapYear/github-rest/issues
-author:         Brandon Chinn <brandon@leapyear.io>
-maintainer:     Brandon Chinn <brandon@leapyear.io>
+homepage:       https://github.com/brandonchinn178/github-rest#readme
+bug-reports:    https://github.com/brandonchinn178/github-rest/issues
+author:         Brandon Chinn <brandonchinn178@gmail.com>
+maintainer:     Brandon Chinn <brandonchinn178@gmail.com>
 license:        BSD3
-license-file:   LICENSE
+license-file:   LICENSE.md
 build-type:     Simple
 extra-source-files:
     README.md
@@ -27,7 +27,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/LeapYear/github-rest
+  location: https://github.com/brandonchinn178/github-rest
 
 library
   exposed-modules:
