--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,26 +8,8 @@ on:
 
 jobs:
   build_and_test:
-    strategy:
-      matrix:
-        stack_yaml:
-          - stack-ghc-8.2.yaml
-          - stack-ghc-8.4.yaml
-          - stack-ghc-8.6.yaml
-          - stack-ghc-8.8.yaml
-          - stack-ghc-8.10.yaml
-          - stack-ghc-9.0.yaml
-          - stack-ghc-9.2.yaml
-          - stack-ghc-9.4.yaml
-        include:
-          - stack_yaml: stack.yaml
-            latest: true
-
-    name: build_and_test (${{ matrix.stack_yaml }})
-    runs-on: ubuntu-22.04
-    env:
-      STACK_YAML: ${{ matrix.stack_yaml }}
-
+    name: build_and_test
+    runs-on: ubuntu-latest
     steps:
       -
         uses: actions/checkout@v3
@@ -35,7 +17,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.stack
-          key: ${{ runner.os }}-stack-cache-${{ hashFiles(matrix.stack_yaml, 'package.yaml') }}
+          key: ${{ runner.os }}-stack-cache-${{ hashFiles('stack.yaml', 'package.yaml') }}
       -
         name: Build + Test
         run: stack test --haddock --no-haddock-deps --coverage
@@ -43,7 +25,6 @@ jobs:
         name: Check that files are unmodified
         run: git diff --exit-code
       -
-        if: ${{ matrix.latest }}
         name: Convert coverage output
         run: |
           HPC_LCOV_VERSION=1.1.1
@@ -53,10 +34,65 @@ jobs:
           chmod +x /usr/local/bin/hpc-lcov
           hpc-lcov
       -
-        if: ${{ matrix.latest }}
         uses: codecov/codecov-action@v3
         with:
           files: lcov.info
+
+  ghc_compat_test:
+    strategy:
+      matrix:
+        ghc_version:
+          - '8.2'
+          - '8.4'
+          - '8.6'
+          - '8.8'
+          - '8.10'
+          - '9.0'
+          - '9.2'
+          - '9.4'
+        include:
+          - ghc_version: '8.2'
+            oldest: true
+
+    name: ghc_compat_test (${{ matrix.ghc_version }})
+    runs-on: ubuntu-latest
+
+    steps:
+      -
+        uses: actions/checkout@v3
+      -
+        id: setup
+        name: Set up GHC ${{ matrix.ghc_version }}
+        uses: haskell-actions/setup@v2
+        with:
+          ghc-version: ${{ matrix.ghc_version }}
+      -
+        name: Configure the build
+        run:
+          cabal configure
+            --enable-test
+            --test-options="--color=always"
+            --test-show-details=streaming
+      -
+        if: ${{ matrix.oldest }}
+        name: Use oldest dependencies
+        run: cabal configure --enable-append --prefer-oldest
+      -
+        name: Get build plan
+        run: cabal build --dry-run
+      -
+        name: Get current month to clear cache
+        run: echo "CURR_MONTH=$(date +%B)" | tee -a "$GITHUB_ENV"
+      -
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.setup.outputs.cabal-store }}
+          key: ${{ runner.os }}-cabal-cache-${{ env.CURR_MONTH }}-${{ matrix.ghc_version }}-${{ hashFiles('**/plan.json') }}
+          restore-keys: |
+               ${{ runner.os }}-cabal-cache-${{ env.CURR_MONTH }}-${{ matrix.ghc_version }}-
+      -
+        name: Build + Test
+        run: cabal test
 
   lint:
     runs-on: ubuntu-latest
