--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,17 +42,12 @@ jobs:
     strategy:
       matrix:
         ghc_version:
-          - '8.2'
-          - '8.4'
-          - '8.6'
-          - '8.8'
-          - '8.10'
           - '9.0'
           - '9.2'
           - '9.4'
           - '9.6'
         include:
-          - ghc_version: '8.2'
+          - ghc_version: '9.0'
             oldest: true
 
     name: ghc_compat_test (${{ matrix.ghc_version }})
@@ -77,7 +72,11 @@ jobs:
       -
         if: ${{ matrix.oldest }}
         name: Use oldest dependencies
-        run: cabal configure --enable-append --prefer-oldest
+        run:
+          cabal configure --enable-append
+            --prefer-oldest
+            --constraint='aeson-qq>=0.7.4'
+            --constraint='network-uri>=2.6'
       -
         name: Get build plan
         run: cabal build --dry-run
