--- a/package.yaml
+++ b/package.yaml
@@ -21,45 +21,46 @@ extra-source-files:
 
 github: brandonchinn178/github-rest
 
-ghc-options: -Wall
-when:
-  - condition: impl(ghc >= 8.0)
-    ghc-options:
-      - -Wcompat
-      - -Wincomplete-record-updates
-      - -Wincomplete-uni-patterns
-      - -Wnoncanonical-monad-instances
-  - condition: impl(ghc < 8.8)
-    ghc-options:
-      - -Wnoncanonical-monadfail-instances
-
-dependencies:
-- aeson >= 1.1.2.0 && < 3
-- base >= 4.9 && < 5
-- bytestring >= 0.10.8.1 && < 0.12
-- http-client >= 0.5.13.1 && < 0.8
-- http-client-tls >= 0.3.5.3 && < 0.4
-- http-types >= 0.12.1 && < 0.13
-- jwt >= 0.9.0 && < 0.12
-- mtl >= 2.2.2 && < 2.4
-- scientific >= 0.3.6.2 && < 0.4
-- text >= 1.2.2.2 && < 2.1
-- time >= 1.8.0.2 && < 1.13
-- transformers >= 0.5.2.0 && < 0.7
-- unliftio >= 0.2.7.0 && < 0.3
-- unliftio-core >= 0.1.1.0 && < 0.3
+ghc-options:
+  - -Wall
+  - -Wcompat
+  - -Wincomplete-record-updates
+  - -Wincomplete-uni-patterns
+  - -Wnoncanonical-monad-instances
+  - -Wunused-packages
 
 library:
   source-dirs: src
+  dependencies:
+  - aeson < 3
+  - base >= 4.15 && < 5
+  - bytestring < 0.12
+  - http-client >= 0.5.13 && < 0.8
+  - http-client-tls < 0.4
+  - http-types >= 0.11 && < 0.13
+  - jwt >= 0.9 && < 0.12
+  - mtl < 2.4
+  - scientific < 0.4
+  - text < 2.1
+  - time < 1.13
+  - transformers < 0.7
+  - unliftio < 0.3
+  - unliftio-core < 0.3
 
 tests:
   github-rest-test:
     source-dirs:  test
     main:         Main.hs
     dependencies:
+    - aeson >= 1.5.6.0
     - aeson-qq
+    - base
+    - bytestring
     - github-rest
+    - http-types
+    - mtl
     - tasty
     - tasty-golden
     - tasty-hunit
-    - tasty-quickcheck
+    - tasty-quickcheck >= 0.8.1
+    - text
