--- a/github-rest.cabal
+++ b/github-rest.cabal
@@ -47,10 +47,11 @@ library
       aeson <3
     , base >=4.15 && <5
     , bytestring <0.13
+    , crypton <1.1
     , http-client >=0.5.13 && <0.8
     , http-client-tls <0.4
     , http-types >=0.11 && <0.13
-    , jwt >=0.9 && <0.12
+    , jose-jwt >=0.10.0 && <0.11
     , mtl <2.4
     , scientific <0.4
     , text <2.2
@@ -64,6 +65,7 @@ test-suite github-rest-test
   type: exitcode-stdio-1.0
   main-is: Main.hs
   other-modules:
+      Auth
       Endpoint
       Helpers
       MockQuery
@@ -78,6 +80,7 @@ test-suite github-rest-test
     , aeson-qq
     , base
     , bytestring
+    , crypton
     , github-rest
     , http-types
     , mtl
