--- a/package.yaml
+++ b/package.yaml
@@ -35,10 +35,11 @@ library:
   - aeson < 3
   - base >= 4.15 && < 5
   - bytestring < 0.13
+  - crypton < 1.1
   - http-client >= 0.5.13 && < 0.8
   - http-client-tls < 0.4
   - http-types >= 0.11 && < 0.13
-  - jwt >= 0.9 && < 0.12
+  - jose-jwt >= 0.10.0 && < 0.11
   - mtl < 2.4
   - scientific < 0.4
   - text < 2.2
@@ -56,6 +57,7 @@ tests:
     - aeson-qq
     - base
     - bytestring
+    - crypton
     - github-rest
     - http-types
     - mtl
