--- a/github-rest.cabal
+++ b/github-rest.cabal
@@ -77,7 +77,7 @@ test-suite github-rest-test
   ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wnoncanonical-monad-instances -Wunused-packages
   build-depends:
       aeson >=1.5.6.0
-    , aeson-qq
+    , aeson-qq >=0.8.4
     , base
     , bytestring
     , crypton
