--- a/github-rest.cabal
+++ b/github-rest.cabal
@@ -5,7 +5,7 @@ cabal-version: >= 1.10
 -- see: https://github.com/sol/hpack
 
 name:           github-rest
-version:        1.1.4
+version:        1.2.0
 synopsis:       Query the GitHub REST API programmatically
 description:    Query the GitHub REST API programmatically, which can provide a more
                 flexible and clear interface than if all of the endpoints and their types
@@ -45,7 +45,7 @@ library
   ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wnoncanonical-monad-instances -Wunused-packages
   build-depends:
       aeson <3
-    , base >=4.15 && <5
+    , base <5
     , bytestring <0.13
     , crypton <1.1
     , http-client >=0.5.13 && <0.8
