--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,23 @@ jobs:
             --test-options="--color=always"
             --test-show-details=streaming
       -
+        if: ${{ matrix.ghc_version == '9.14' }}
+        name: Configure for 9.14
+        run:
+          cabal configure --enable-append
+            --allow-newer='aeson:*'
+            --allow-newer='containers:*'
+            --allow-newer='hashable:*'
+            --allow-newer='indexed-traversable:*'
+            --allow-newer='indexed-traversable-instances:*'
+            --allow-newer='semialign:*'
+            --allow-newer='text-iso8601:*'
+            --allow-newer='th-expand-syns:*'
+            --allow-newer='th-orphans:*'
+            --allow-newer='these:*'
+            --allow-newer='time-compat:*'
+            --allow-newer='uuid-types:*'
+      -
         if: ${{ matrix.oldest }}
         name: Use oldest dependencies
         run:
